- updated version to Java 15